--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <!-- Two -->
       <section id="two" class="wrapper alt style2">
         <section class="spotlight">
-          <div class="image"><a href="https://imagespace.onrender.com/"><img src="images/ImageSpace-demo-pic.png" alt="" /></a></div>
+          <div class="image"><a target="_blank" rel="noopener noreferrer" href="https://imagespace.onrender.com/"><img src="images/ImageSpace-demo-pic.png" alt="" /></a></div>
           <div class="content">
             <h2>
               <br />
@@ -216,7 +216,7 @@
           </div>
         </section>
         <section class="spotlight">
-          <div class="image"><a href="https://app-academy-api-project.onrender.com"></a>><img src="images/FindYourSpot-demo-pic.png" alt="" /></div>
+          <div class="image"><a target="_blank" rel="noopener noreferrer" href="https://app-academy-api-project.onrender.com"></a><img src="images/FindYourSpot-demo-pic.png" alt="" /></div>
           <div class="content">
             <h2>
              FindYourSpot<br />
@@ -229,7 +229,7 @@
           </div>
         </section>
         <section class="spotlight">
-          <div class="image"><a href="https://handmade-haven.onrender.com/"></a><img src="images/HandmadeHaven-demo-pic.png" alt="" /></div>
+          <div class="image"><a target="_blank" rel="noopener noreferrer" href="https://handmade-haven.onrender.com/"></a><img src="images/HandmadeHaven-demo-pic.png" alt="" /></div>
           <div class="content">
             <h2>
               Handmade Haven<br />
