--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
               <a href="#menu" class="menuToggle"><span>Menu</span></a>
               <div id="menu">
                 <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="#one">Skills</a></li>
-                  <li><a href="#inner2">About</a></li>
-				  <li><a href="#cta" >Contact</a></li>
+                  <li><a class="more scrolly" href="index.html">Home</a></li>
+                  <li><a class="more scrolly" href="#one">Skills</a></li>
+                  <li><a class="more scrolly" href="#inner2">About</a></li>
+				  <li><a class="more scrolly" href="#cta" >Contact</a></li>
 
                 </ul>
               </div>
