--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <header class="major">
             <h2>Skills</h2>
             <p>
-            Full Stack project development from-the-ground-up utlitzing various industry standard techonologies
+            Full Stack project development from-the-ground-up utilizing various industry standard techonologies
             </p>
           </header>
           <ul class="icons major">
