fixed mobile layout

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                   <li><a class="more scrolly" href="index.html">Home</a></li>
                   <li><a class="more scrolly" href="#one">Skills</a></li>
                   <li><a class="more scrolly" href="#inner2">About</a></li>
+                  <li><a class="more scrolly" href="#two">Projects</a></li>
 				  <li><a class="more scrolly" href="#cta" >Contact</a></li>
 
                 </ul>
@@ -216,11 +217,10 @@
           </div>
         </section>
         <section class="spotlight">
-          <div class="image"><a target="_blank" rel="noopener noreferrer" href="https://app-academy-api-project.onrender.com"></a><img src="images/FindYourSpot-demo-pic.png" alt="" /></div>
+          <div class="image"><a target="_blank" rel="noopener noreferrer" href="https://app-academy-api-project.onrender.com"><img src="images/FindYourSpot-demo-pic.png" alt="" /></a></div>
           <div class="content">
             <h2>
              FindYourSpot<br />
-
             </h2>
             <p>
             An AirBnB clone with three working CRUD features built using a React frontend With an Express backend
@@ -229,7 +229,7 @@
           </div>
         </section>
         <section class="spotlight">
-          <div class="image"><a target="_blank" rel="noopener noreferrer" href="https://handmade-haven.onrender.com/"></a><img src="images/HandmadeHaven-demo-pic.png" alt="" /></div>
+          <div class="image"><a target="_blank" rel="noopener noreferrer" href="https://handmade-haven.onrender.com/"><img src="images/HandmadeHaven-demo-pic.png" alt="" /></a></div>
           <div class="content">
             <h2>
               Handmade Haven<br />
