--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <header class="major">
             <h2>Skills</h2>
             <p>
-            Full Stack project development from-the-ground-up utilizing various industry standard techonologies
+            Full Stack project development from-the-ground-up utilizing various industry standard technologies
             </p>
           </header>
           <ul class="icons major">
@@ -212,7 +212,7 @@
            ImageSpace
             </h2>
             <br>
-              A Flickr clone with 5 working CRUD features built using a React frontend with a Flask backend<br>Users • Images • Comments • Likes • Follows</br>
+              A Flickr clone with 5 working CRUD features built using a React frontend with a Flask backend<br> Users • Images • Comments • Likes • Follows</br>
             </p>
           </div>
         </section>
