uploaded recent resume

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             Bringing a smile to you and your team, gauranteed
           </p>
           <ul class="actions special">
-            <li><a href="/images/My Resume - Brennan Cota (3).pdf" download="My Resume - Brennan Cota (3).pdf" class="button primary">Resume</a></li>
+            <li><a href="/images/My Resume - Brennan Cota.pdf" download="My Resume - Brennan Cota.pdf" class="button primary">Resume</a></li>
             <li><a href="#cta" class="button primary">Contact</a></li>
           </ul>
         </div>
@@ -195,7 +195,7 @@
 			<p>When I am not coding, I love to indulge myself with horror films, go on camping adventures to various mountainous terrains, and discover new restaurants that awaken my palate.
           </p>
           <ul class="actions special">
-            <li><a href="/images/My Resume - Brennan Cota (3).pdf" download="My Resume - Brennan Cota (3).pdf" class="button primary">Resume</a></li>
+            <li><a href="/images/My Resume - Brennan Cota.pdf" download="My Resume - Brennan Cota.pdf" class="button primary">Resume</a></li>
             <li><a href="#cta" class="button primary">Contact</a></li>
           </ul>
         </div>
@@ -319,7 +319,7 @@
           <ul class="actions stacked">
             <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/brennan-cota-11768aa6/" class="button fit primary">LinkedIn</a></li>
             <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/Sleightttt" class="button fit primary">Github</a></li>
-			<li><a href="images/My Resume - Brennan Cota (3).pdf" download="My Resume - Brennan Cota (3).pdf" class="button fit primary">Resume</a></li>
+			<li><a href="images/My Resume - Brennan Cota.pdf" download="My Resume - Brennan Cota.pdf" class="button fit primary">Resume</a></li>
           </ul>
         </div>
       </section>
