--- a/index.html
+++ b/index.html
@@ -210,8 +210,11 @@
               <br />
            ImageSpace
             </h2>
+                     <a target=”_blank” href="https://github.com/Sleightttt/AA-Captstone-Project">Github Link</a>
             <br>
-              A Flickr clone with 5 working CRUD features built using a React frontend with a Flask backend<br> Users • Images • Comments • Likes • Follows</br>
+              A Flickr clone with 5 working CRUD features built using a React frontend with a Flask backend
+
+              <br> Users • Images • Comments • Likes • Follows</br>
             </p>
           </div>
         </section>
@@ -221,6 +224,7 @@
             <h2>
              FindYourSpot<br />
             </h2>
+             <a target=”_blank” href="https://github.com/13kparkin/Handmade-Haven">Github Link</a>
             <p>
             An AirBnB clone with three working CRUD features built using a React frontend With an Express backend
 			<br> Users • Spots • Reviews</br>
@@ -234,6 +238,7 @@
               Handmade Haven<br />
 
             </h2>
+               <a target=”_blank” href="https://github.com/Sleightttt/API-Project">Github Link</a>
             <p>
               An Etsy clone with five working CRUD features built with three other developers utilizing a React frontend with a Flask backend
 			  <br>Users • Products • Reviews • Search • Cart</br>
