--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             Bringing a smile to you and your team, gauranteed
           </p>
           <ul class="actions special">
-            <li><a href="/images/My Resume - Brennan Cota.pdf" download="My Resume - Brennan Cota.pdf" class="button primary">Resume</a></li>
+            <li><a href="/images/My Resume - Brennan Cota (8).pdf" download="My Resume - Brennan Cota.pdf" class="button primary">Resume</a></li>
             <li><a href="#cta" class="button primary">Contact</a></li>
           </ul>
         </div>
@@ -195,7 +195,7 @@
 			<p>When I am not coding, I love to indulge myself with horror films, go on camping adventures to various mountainous terrains, and discover new restaurants that awaken my palate.
           </p>
           <ul class="actions special">
-            <li><a href="/images/My Resume - Brennan Cota.pdf" download="My Resume - Brennan Cota.pdf" class="button primary">Resume</a></li>
+            <li><a href="/images/My Resume - Brennan Cota (8).pdf" download="My Resume - Brennan Cota.pdf" class="button primary">Resume</a></li>
             <li><a href="#cta" class="button primary">Contact</a></li>
           </ul>
         </div>
@@ -218,19 +218,7 @@
             </p>
           </div>
         </section>
-        <section class="spotlight">
-          <div class="image"><a target="_blank" rel="noopener noreferrer" href="https://app-academy-api-project.onrender.com"><img src="images/FindYourSpot-demo-pic.png" alt="" /></a></div>
-          <div class="content">
-            <h2>
-             FindYourSpot<br />
-            </h2>
-             <a target=”_blank” href="https://github.com/13kparkin/Handmade-Haven">Github Link</a>
-            <p>
-            An AirBnB clone with three working CRUD features built using a React frontend With an Express backend
-			<br> Users • Spots • Reviews</br>
-            </p>
-          </div>
-        </section>
+
         <section class="spotlight">
           <div class="image"><a target="_blank" rel="noopener noreferrer" href="https://handmade-haven.onrender.com/"><img src="images/HandmadeHaven-demo-pic.png" alt="" /></a></div>
           <div class="content">
@@ -238,10 +226,24 @@
               Handmade Haven<br />
 
             </h2>
-               <a target=”_blank” href="https://github.com/Sleightttt/API-Project">Github Link</a>
+                 <a target=”_blank” href="https://github.com/13kparkin/Handmade-Haven">Github Link</a>
             <p>
               An Etsy clone with five working CRUD features built with three other developers utilizing a React frontend with a Flask backend
 			  <br>Users • Products • Reviews • Search • Cart</br>
+            </p>
+          </div>
+        </section>
+         <section class="spotlight">
+          <div class="image"><a target="_blank" rel="noopener noreferrer" href="https://app-academy-api-project.onrender.com"><img src="images/FindYourSpot-demo-pic.png" alt="" /></a></div>
+          <div class="content">
+            <h2>
+             FindYourSpot<br />
+            </h2>
+            <a target=”_blank” href="https://github.com/Sleightttt/API-Project">Github Link</a>
+
+            <p>
+            An AirBnB clone with three working CRUD features built using a React frontend With an Express backend
+			<br> Users • Spots • Reviews</br>
             </p>
           </div>
         </section>
@@ -323,7 +325,7 @@
           <ul class="actions stacked">
             <li><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/brennan-cota-11768aa6/" class="button fit primary">LinkedIn</a></li>
             <li><a target="_blank" rel="noopener noreferrer" href="https://github.com/Sleightttt" class="button fit primary">Github</a></li>
-			<li><a href="images/My Resume - Brennan Cota.pdf" download="My Resume - Brennan Cota.pdf" class="button fit primary">Resume</a></li>
+			<li><a href="images/My Resume - Brennan Cota.pdf" download="My Resume - Brennan Cota (8).pdf" class="button fit primary">Resume</a></li>
           </ul>
         </div>
       </section>
