fixed resume, newest

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             Bringing a smile to you and your team, gauranteed
           </p>
           <ul class="actions special">
-            <li><a href="/images/My Resume - Brennan Cota (13).pdf" download="My Resume - Brennan Cota (13).pdf" class="button primary">Resume</a></li>
+            <li><a href="/images/My Resume - Brennan Cota (13).pdf" download="My Resume - Brennan Cota.pdf" class="button primary">Resume</a></li>
             <li><a href="#cta" class="button primary">Contact</a></li>
           </ul>
         </div>
