added to Imagespace description

--- a/index.html
+++ b/index.html
@@ -129,6 +129,21 @@
               </span>
             </li>
             <li>
+
+              <span class="icon major style1"
+                >
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" />
+              </span>
+            </li>
+            <li>
+
+              <span class="icon major style1"
+                >
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sqlite/sqlite-original.svg" />
+              </span>
+            </li>
+
+            <li>
               <!-- <span class="icon fa-gem major style1"
 				  ><span class="label">Lorem</span></span
 				> -->
@@ -184,7 +199,7 @@
         <div id="inner2" class="inner2">
           <h2>About</h2>
           <p>
-			Thank you for checking my portfolio! I am a software engineer with experience in building web applications with UI, who always finds zeal in debugging errors and finding more efficient approach to problems.
+			Thank you for checking my portfolio! I am a software engineer with experience in building web applications with various technologies, who always finds zeal in debugging errors and finding more efficient approach to problems.
 
 		<p> I graduated from App Academy, a highly selective software engineer program, where I spent more than 100 hours per week learning and mastering my skills in different technologies and computer languages. Though challenging, it invigorated my passion for problem solving and the desire to keep learning and building my knowledge to become the most optimal problem-solver as a programmer. And I am looking for an opportunity to keep this flame going.
 	</p>
@@ -209,7 +224,7 @@
             </h2>
                      <a target=”_blank” href="https://github.com/Sleightttt/AA-Captstone-Project">Github Link</a>
             <br>
-              A Flickr clone with 5 working CRUD features built using a React frontend with a Flask backend
+              A Flickr clone with 5 working CRUD features built using a React frontend with a Flask backend. Imagespace features an auto-tagging feature by implementing the AI image recognition API Imagga. Users can sign up for accounts, follow and unfollow other users, both like and comment on photos, and upload their own! Imagespace also features a search bar that allows users to search for other users, images, and tags. Users can also edit their own profiles and delete their own images and comments. This website was built with a 'mobile first' approach, and is fully responsive for mobile, tablet, and desktop.
 
               <br> Users • Images • Comments • Likes • Follows</br>
             </p>
