added github link clarity

--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
               <br />
            ImageSpace
             </h2>
-                     <a target=”_blank” href="https://github.com/Sleightttt/AA-Captstone-Project">Github Link</a>
+                     <a class="github-link"  target=”_blank” href="https://github.com/Sleightttt/AA-Captstone-Project">Github Link</a>
+
             <br>
               A Flickr clone with 5 working CRUD features built using a React frontend with a Flask backend. Imagespace features an auto-tagging feature by implementing the AI image recognition API Imagga. Users can sign up for accounts, follow and unfollow other users, both like and comment on photos, and upload their own! Imagespace also features a search bar that allows users to search for other users, images, and tags. Users can also edit their own profiles and delete their own images and comments. This website was built with a 'mobile first' approach, and is fully responsive for mobile, tablet, and desktop.
 
@@ -238,7 +239,7 @@
               Handmade Haven<br />
 
             </h2>
-                 <a target=”_blank” href="https://github.com/13kparkin/Handmade-Haven">Github Link</a>
+                 <a class="github-link" target=”_blank” href="https://github.com/13kparkin/Handmade-Haven">Github Link</a>
             <p>
               An Etsy clone with five working CRUD features built with three other developers utilizing a React frontend with a Flask backend
 			  <br>Users • Products • Reviews • Search • Cart</br>
@@ -251,7 +252,7 @@
             <h2>
              FindYourSpot<br />
             </h2>
-            <a target=”_blank” href="https://github.com/Sleightttt/API-Project">Github Link</a>
+            <a class="github-link" target=”_blank” href="https://github.com/Sleightttt/API-Project">Github Link</a>
 
             <p>
             An AirBnB clone with three working CRUD features built using a React frontend With an Express backend
