--- a/index.html
+++ b/index.html
@@ -139,7 +139,13 @@
 
               <span class="icon major style1"
                 >
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sqlite/sqlite-original.svg" />
+
+
+
+                <img style="background-color: rgb(15, 214, 184);" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-plain.svg" />
+
+
+
               </span>
             </li>
 
@@ -199,9 +205,9 @@
         <div id="inner2" class="inner2">
           <h2>About</h2>
           <p>
-			Thank you for checking my portfolio! I am a software engineer with experience in building web applications with various technologies, who always finds zeal in debugging errors and finding more efficient approach to problems.
+			Thank you for checking out my portfolio! I am a software engineer with experience in building web applications from the ground up, who always finds zeal in debugging errors and finding more efficient approach to problems.
 
-		<p> I graduated from App Academy, a highly selective software engineer program, where I spent more than 100 hours per week learning and mastering my skills in different technologies and computer languages. Though challenging, it invigorated my passion for problem solving and the desire to keep learning and building my knowledge to become the most optimal problem-solver as a programmer. And I am looking for an opportunity to keep this flame going.
+		<p> I graduated from App Academy, a highly selective software engineer program, where I spent more than 100 hours per week learning and mastering my skills in different technologies and computer languages. Though challenging, it invigorated my passion for problem solving and the desire to keep learning and building my knowledge to become the most optimal problem-solver as a programmer. Since graduating I've worked two contract roles, one developing an Agile Chatbot for Scrummasters and another developing solutions for a medical marketing company.  I am looking for a full-time opportunity to keep this flame going!
 	</p>
 
 			<p>When I am not coding, I love to indulge myself with horror films, go on camping adventures to various mountainous terrains, and discover new restaurants that awaken my palate.
@@ -216,6 +222,7 @@
       <!-- Two -->
       <section id="two" class="wrapper alt style2">
         <section class="spotlight">
+
           <div class="image"><a target="_blank" rel="noopener noreferrer" href="https://imagespace.onrender.com/"><img src="images/ImageSpace-demo-pic.png" alt="" /></a></div>
           <div class="content">
             <h2>
@@ -233,16 +240,19 @@
         </section>
 
         <section class="spotlight">
-          <div class="image"><a target="_blank" rel="noopener noreferrer" href="https://handmade-haven.onrender.com/"><img src="images/HandmadeHaven-demo-pic.png" alt="" /></a></div>
+          <div class="image"><a target="_blank" rel="noopener noreferrer" href="https://github.com/Sleightttt/Geist"><video controls autoplay width="100%" height="300px">
+            <source src="/images/jobseekerapp.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video></a></div>
           <div class="content">
             <h2>
-              Handmade Haven<br />
+              JobSeeker<br />
 
             </h2>
-                 <a class="github-link" target=”_blank” href="https://github.com/13kparkin/Handmade-Haven">Github Link</a>
+                 <a class="github-link" target=”_blank” href="https://github.com/Sleightttt/Geist">Github Link</a>
             <p>
-              An Etsy clone with five working CRUD features built with three other developers utilizing a React frontend with a Flask backend
-			  <br>Users • Products • Reviews • Search • Cart</br>
+              I developed a sophisticated job-seeking app using React Native, featuring a seamless UI for an optimized job search. Utilizing the Axios library and Jsearch API from RapidApi, the app integrates real-time and accurate job data. Prioritizing clean code architecture, I implemented best practices for scalability and performance, employing modularization, code reusability, and responsive design. This project showcases my expertise in software engineering, API integration, and mobile app development, from crafting pixel-perfect UI components to managing asynchronous data fetching and state. It not only meets industry standards but sets a benchmark for user-centric job-seeking solutions, reflecting my commitment to delivering top-tier technical solutions and empowering jobseekers in their career aspirations.
+
             </p>
           </div>
         </section>
@@ -255,7 +265,7 @@
             <a class="github-link" target=”_blank” href="https://github.com/Sleightttt/API-Project">Github Link</a>
 
             <p>
-            An AirBnB clone with three working CRUD features built using a React frontend With an Express backend
+            An AirBnB clone with three working CRUD features built using a React frontend With an Express backend. This is mostly here as a relic to remind myself of just how far I've come as a developer.
 			<br> Users • Spots • Reviews</br>
             </p>
           </div>
