added ootify to projects

--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
 				  ><span class="label">Lorem</span></span
 				> -->
               <span class="icon major style1"
+                ><img class="expo" src="/images/expo_icon.png" />
+
+              </span>
+            </li>
+            <li>
+              <!-- <span class="icon fa-gem major style1"
+				  ><span class="label">Lorem</span></span
+				> -->
+              <span class="icon major style1"
                 ><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" />
 
               </span>
@@ -258,16 +267,16 @@
           </div>
         </section>
          <section class="spotlight">
-          <div class="image"><a target="_blank" rel="noopener noreferrer" href="https://app-academy-api-project.onrender.com"><img src="images/FindYourSpot-demo-pic.png" alt="" /></a></div>
+          <div class="image"><a target="_blank" rel="noopener noreferrer" href="https://github.com/Sleightttt/ootify-clone"><img src="images/OOtify_clone.png" alt="" /></a></div>
           <div class="content">
             <h2>
-             FindYourSpot<br />
+             OOtify Clone<br />
             </h2>
-            <a class="github-link" target=”_blank” href="https://github.com/Sleightttt/API-Project">Github Link</a>
+            <a class="github-link" target=”_blank” href="https://github.com/Sleightttt/ootify-clone">Github Link</a>
 
             <p>
             An AirBnB clone with three working CRUD features built using a React frontend With an Express backend. This is mostly here as a relic to remind myself of just how far I've come as a developer.
-			<br> Users • Spots • Reviews</br>
+			<br> Response Design • Mobile Friendly • Videos, GIF's and Animations</br>
             </p>
           </div>
         </section>
