added hover to menu anchors

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <ul class="icons major">
             <li>
 
-              <span class="icon major style1"
+              <span class=" icn icon major style1"
                 ><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sqlalchemy/sqlalchemy-original.svg" />
 
               </span>
@@ -88,7 +88,7 @@
               <!-- <span class="icon fa-gem major style1"
 				  ><span class="label">Lorem</span></span
 				> -->
-              <span class="icon major style1"
+              <span class=" icn icon major style1"
                 ><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original-wordmark.svg" />
 
               </span>
@@ -97,7 +97,7 @@
               <!-- <span class="icon fa-gem major style1"
 				  ><span class="label">Lorem</span></span
 				> -->
-              <span class="icon major style1"
+              <span class=" icn icon major style1"
                 ><img class="expo" src="/images/expo_icon.png" />
 
               </span>
@@ -106,7 +106,7 @@
               <!-- <span class="icon fa-gem major style1"
 				  ><span class="label">Lorem</span></span
 				> -->
-              <span class="icon major style1"
+              <span class=" icn icon major style1"
                 ><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" />
 
               </span>
@@ -115,7 +115,7 @@
               <!-- <span class="icon fa-gem major style1"
 				  ><span class="label">Lorem</span></span
 				> -->
-              <span class="icon major style1"
+              <span class=" icn icon major style1"
                 ><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" />
 
             </li>
@@ -123,7 +123,7 @@
               <!-- <span class="icon fa-gem major style1"
 				  ><span class="label">Lorem</span></span
 				> -->
-              <span class="icon major style1"
+              <span class=" icn icon major style1"
                 ><img
                   src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
                 />
@@ -133,21 +133,21 @@
               <!-- <span class="icon fa-gem major style1"
 				  ><span class="label">Lorem</span></span
 				> -->
-              <span class="icon major style1"
+              <span class=" icn icon major style1"
                 ><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sqlite/sqlite-original-wordmark.svg" />
 
               </span>
             </li>
             <li>
 
-              <span class="icon major style1"
+              <span class=" icn icon major style1"
                 >
                 <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" />
               </span>
             </li>
             <li>
 
-              <span class="icon major style1"
+              <span class=" icn icon major style1"
                 >
 
 
@@ -163,45 +163,45 @@
               <!-- <span class="icon fa-gem major style1"
 				  ><span class="label">Lorem</span></span
 				> -->
-              <span class="icon major style1"
+              <span class=" icn icon major style1"
                 ><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flask/flask-original-wordmark.svg" />
 
               </span>
             </li>
             <li>
-              <span class="icon major style2"
+              <span class=" icn icon major style2"
                 ><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original-wordmark.svg" />
 
                 <span class="label">Ipsum</span></span
               >
             </li>
 			<li>
-				<span class="icon major style2"
+				<span class=" icn icon major style2"
 				  ><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original-wordmark.svg" />
 				  <span class="label">Ipsum</span></span
 				>
 			  </li>
 			  <li>
-				<span class="icon major style2"
+				<span class=" icn icon major style2"
 				  ><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original-wordmark.svg" />
 
 				  <span class="label">Ipsum</span></span
 				>
 			  </li>
 			  <li>
-				<span class="icon major style2"
+				<span class=" icn icon major style2"
 				  ><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg" />
 				  <span class="label">Ipsum</span></span
 				>
 			  </li>
 			  <li>
-				<span class="icon major style2"
+				<span class=" icn icon major style2"
 				  ><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original-wordmark.svg" />
 				  <span class="label">Ipsum</span></span
 				>
 			  </li>
 			  <li>
-				<span class="icon major style2"
+				<span class=" icn icon major style2"
 				  ><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/redux/redux-original.svg" />
 				  <span class="label">Ipsum</span></span
 				>
@@ -244,8 +244,10 @@
             <br>
               A Flickr clone with 5 working CRUD features built using a React frontend with a Flask backend. Imagespace features an auto-tagging feature by implementing the AI image recognition API Imagga. Users can sign up for accounts, follow and unfollow other users, both like and comment on photos, and upload their own! Imagespace also features a search bar that allows users to search for other users, images, and tags. Users can also edit their own profiles and delete their own images and comments. This website was built with a 'mobile first' approach, and is fully responsive for mobile, tablet, and desktop.
 
-              <br> Users • Images • Comments • Likes • Follows</br>
+
             </p>
+            <br> Users • Images • Comments • Likes • Follows</br>
+            <br>&nbsp;</br>
           </div>
         </section>
 
@@ -264,6 +266,8 @@
               I developed a sophisticated job-seeking app using React Native, featuring a seamless UI for an optimized job search. Utilizing the Axios library and Jsearch API from RapidApi, the app integrates real-time and accurate job data. Prioritizing clean code architecture, I implemented best practices for scalability and performance, employing modularization, code reusability, and responsive design. This project showcases my expertise in software engineering, API integration, and mobile app development, from crafting pixel-perfect UI components to managing asynchronous data fetching and state. It not only meets industry standards but sets a benchmark for user-centric job-seeking solutions, reflecting my commitment to delivering top-tier technical solutions and empowering jobseekers in their career aspirations.
 
             </p>
+            <br> RapidAPI Integration • Mobile • Expo Go • IOS/Android compatiable</br>
+            <br>&nbsp;</br>
           </div>
         </section>
          <section class="spotlight">
@@ -275,9 +279,13 @@
             <a class="github-link" target=”_blank” href="https://github.com/Sleightttt/ootify-clone">Github Link</a>
 
             <p>
-            An AirBnB clone with three working CRUD features built using a React frontend With an Express backend. This is mostly here as a relic to remind myself of just how far I've come as a developer.
-			<br> Response Design • Mobile Friendly • Videos, GIF's and Animations</br>
+           OOTify clone is a clone of a mental health organizations landing page. This page features many animations, background images, responsive design principals, and a fully functional contact form. This page was built using React, CSS, HTML5 and Node.js. This page was built with a 'mobile first' approach, and is fully responsive for mobile, tablet, and desktop. Originally built using Webflow, this website was rebuilt from scratch using React and CSS to be an almost pixel perfect representation of the original website.
+
+
             </p>
+			<br> Response Design • Mobile Friendly • Videos, GIF's and Animations</br>
+      <br>&nbsp;</br>
+
           </div>
         </section>
       </section>
