--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Brennan Cota</title>
+    <title>Brennan Cota's Portfolio</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
