--- a/index.html
+++ b/index.html
@@ -289,6 +289,43 @@
           </div>
         </section>
       </section>
+      <section id="banner">
+        <section id="inner2" >
+
+ <br>&nbsp;</br>
+          <div class="content">
+            <br>&nbsp;</br>
+            <h2>
+           Contract Work
+            </h2>
+            <h3>Lifescience Media</h3>
+            <p>
+              As a versatile Software Engineer, I led impactful projects at a prominent medical media company. Leveraging React.js and JavaScript, I designed a dynamic web-based map application, emphasizing real-time data retrieval, and ensuring seamless integration with Node.js and Express. </p>
+              <p>
+              <br>&nbsp;</br> I spearheaded the creation of an application paired with a new medical device, implementing Expo for efficient deployment on both iOS and Android. Collaborating cross-functionally, I contributed to technology selection discussions, aligning project goals with industry best practices. My work showcased expertise in user-friendly interfaces, server-side communication, and comprehensive application deployment.
+            </p>
+
+
+
+          </div>
+          <div class="content">
+          <h3>Big Deal Digital</h3>
+          <p>
+            As a dynamic Software Engineer, I engineered project architecture, driving innovation for impactful application development. A standout accomplishment includes developing the Agile Coach Bot, revolutionizing coaching processes for agile practitioners and enhancing workflow efficiency. I championed the implementation of Git and Github for version control, ensuring seamless collaboration and efficient project delivery.
+          </p>
+          <p>
+            My contributions extended to automating build and deployment processes using NGINX/Jenkins, implementing version control strategies, and integrating automated testing frameworks. In project architecture, I initially employed a Python/Flask and React.js stack, later transitioning mid-project to an Express/JavaScript backend for enhanced flexibility.
+          </p>
+          <p>
+
+            Utilizing Jira for project management, I proficiently managed tasks with Kanban Boards, collaborated within Agile SCRUM methodologies, and ensured efficient development processes, resulting in timely project deliveries.
+            <br>&nbsp;</br>
+          </p>
+          </p>
+        </div>
+        </section>
+        <!-- Repeat this structure for each NDA project -->
+      </section>
 
       <!-- CTA -->
       <section id="cta" class="wrapper style4">
