--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
                 >
 
 
-
-                <img style="background-color: rgb(15, 214, 184);" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-plain.svg" />
+<img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original-wordmark.svg" />
 
 
 
